@@ -1,0 +1,41 @@
+	.file	"cold-attribute-4.c"
+	.text
+	.p2align 4,,15
+.globl t
+	.type	t, @function
+t:
+.LFB14:
+	movl	$-1, %eax
+	ret
+.LFE14:
+	.size	t, .-t
+	.section	.eh_frame,"a",@progbits
+.Lframe1:
+	.long	.LECIE1-.LSCIE1
+.LSCIE1:
+	.long	0x0
+	.byte	0x1
+	.string	"zR"
+	.uleb128 0x1
+	.sleb128 -8
+	.byte	0x10
+	.uleb128 0x1
+	.byte	0x3
+	.byte	0xc
+	.uleb128 0x7
+	.uleb128 0x8
+	.byte	0x90
+	.uleb128 0x1
+	.align 8
+.LECIE1:
+.LSFDE1:
+	.long	.LEFDE1-.LASFDE1
+.LASFDE1:
+	.long	.LASFDE1-.Lframe1
+	.long	.LFB14
+	.long	.LFE14-.LFB14
+	.uleb128 0x0
+	.align 8
+.LEFDE1:
+	.ident	"GCC: (GNU) 4.1.2 20061115 (prerelease) (Debian 4.1.1-21)"
+	.section	.note.GNU-stack,"",@progbits
