@@ -1,3 +1,10 @@
+2008-08-31  Jan Hubicka  <jh@suse.cz>
+
+	* gcc.target/i386/cold-attribute-1.c: New testcase.
+	* gcc.target/i386/cold-attribute-2.c: New testcase.
+	* gcc.target/i386/cold-attribute-3.c: New testcase.
+	* gcc.target/i386/cold-attribute-4.c: New testcase.
+
 2008-08-31  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/37287
